# inspection-testing

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  Test.hs  ghc-proofs.cabal  inspection-test.cabal  inspection-testing.cabal
.github/workflows/: haskell-ci.yml
GHC/: Proof.hs
GHC/Proof/: Plugin.hs
Test/: Inspection.hs
Test/Inspection/: Core.hs  Internal.hs  Plugin.hs  TcPlugin.hs
examples/: DWARF.hs  Dictionary.hs  DoesNotUse.hs  Fusion.hs  GenericLens.hs  Generics.hs  HLint.hs  HPCs.hs  LetsTest.hs  MutualRecursion.hs  NS_NP.hs  Regression.hs  Simple.hs  SimpleTest.hs  Successors.hs  Text.hs  UnsafeCoerce.hs  WorkerWrapper.hs
examples/text-api/: LazyTextFuns.hs  MoreText.hs  MoreTextMain.hs  MoreTextTH.hs  ShouldDoes.hs  Stats.hs  TextFuns.hs  cabal.project  text-api.cabal
src/Test/: Inspection.hs
src/Test/Inspection/: Core.hs  Plugin.hs
