name:                ghc-proofs
version:             0.1
synopsis:            GHC plugin to prove program equations by simplification
description:         Often when writing Haskel code, one would like to prove things about the code.

                     A good example is writing an 'Applicative' or 'Monad'
                     instance: there are equation that should hold, and
                     checking them manually is tedious.

                     Wouldn’t it be nice if the compiler could check them for
                     us? With this plugin, he can! (At least in certain simple
                     cases, for everything else, you have to use a more
                     dedicated solution.)

                     Currently, the plugin works best with GHC HEAD, which has
                     some additional API hooks. But you can play around with
                     the released version of GHC as well!

                     See the documentation in "GHC.Proof" or the project
                     webpage for more examples and more information.

homepage:            https://github.com/nomeata/ghc-proofs
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2017 Joachim Breitner
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     GHC.Proof
                       GHC.Proof.Plugin
  build-depends:       base >=4.9 && <4.11,
                       ghc == 8.0.* || == 8.1.* || == 8.3.*
  default-language:    Haskell2010
