name:                text-api
version:             0.1
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
-- copyright:
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

flag fast
  default: False

executable test-strict
  --CPP-Options:        -DTextFuns=TextFuns
  main-is:             MoreTextMain.hs
  other-modules:       MoreText
                       MoreTextTH
                       ShouldDoes
                       TextFuns
  other-extensions:    TemplateHaskell, MagicHash
  build-depends:       base >=4.11 && <4.12
  build-depends:       inspection-testing >=0.3 && <0.5
  build-depends:       text ==1.2.3.1
  build-depends:       QuickCheck >=2.9 && <2.10
  build-depends:       template-haskell >=2.13 && <2.14
  build-depends:       bytestring >=0.10 && <0.11
  default-language:    Haskell2010
  -- -O2 is too slow
  ghc-options:         -O

  if flag(fast)
        CPP-Options:        -DITERATIONS=20

executable test-lazy
  CPP-Options:        -DTextFuns=LazyTextFuns
  main-is:             MoreTextMain.hs
  other-modules:       MoreText
                       MoreTextTH
                       ShouldDoes
                       LazyTextFuns
  other-extensions:    TemplateHaskell, MagicHash
  build-depends:       base >=4.11 && <4.12
  build-depends:       inspection-testing >=0.3 && <0.5
  build-depends:       text ==1.2.3.1
  build-depends:       QuickCheck >=2.9 && <2.10
  build-depends:       template-haskell >=2.13 && <2.14
  build-depends:       bytestring >=0.10 && <0.11
  default-language:    Haskell2010
  -- -O2 is too slow
  ghc-options:         -O

  if flag(fast)
        CPP-Options:        -DITERATIONS=20

executable stats
  main-is:             Stats.hs
  other-modules:       ShouldDoes
                       TextFuns
                       LazyTextFuns
  build-depends:       base >=4.11 && <4.12
  build-depends:       text ==1.2.3.1
  build-depends:       template-haskell >=2.13 && <2.14
  build-depends:       bytestring >=0.10 && <0.11
  default-language:    Haskell2010
